*tried* to fix bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,26 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/src
 )
 
-file(GLOB main_srcs
-    "${PROJECT_SOURCE_DIR}/inc/neural_controller.h"
+file(
+    GLOB main_srcs
+    "${PROJECT_SOURCE_DIR}/src/neuralController.c"
+    "${PROJECT_SOURCE_DIR}/inc/neuralController.h"
+    "${PROJECT_SOURCE_DIR}/src/ncHelper.c"
+    "${PROJECT_SOURCE_DIR}/inc/ncHelper.h"
     "${PROJECT_SOURCE_DIR}/src/main.c"
-    "${PROJECT_SOURCE_DIR}/src/neural_controller.c"
+
 )
 
-file(GLOB test_srcs
+file(
+    GLOB test_srcs
     "${PROJECT_SOURCE_DIR}/src/test.c"
+)
+
+file(
+    GLOB test2_srcs
+    "${PROJECT_SOURCE_DIR}/src/test2.c"
+    "${PROJECT_SOURCE_DIR}/src/ncHelper.c"
+    "${PROJECT_SOURCE_DIR}/inc/ncHelper.h"
 )
 
 add_library(
@@ -40,13 +52,15 @@ add_library(
 target_include_directories(
     pbPlots PUBLIC 
     "${PROJECT_SOURCE_DIR}/lib/pbPlots"
-    cJSON
+    cJSON PUBLIC
     "${PROJECT_SOURCE_DIR}/lib/cJSON"
-    minIni
+    minIni PUBLIC
     "${PROJECT_SOURCE_DIR}/lib/minIni")
 
 add_executable(main ${main_srcs})
 add_executable(test ${test_srcs})
+add_executable(test2 ${test2_srcs})
 
 target_link_libraries(main PRIVATE pbPlots cJSON minIni)
 target_link_libraries(test PRIVATE pbPlots)
+target_link_libraries(test2 PRIVATE pbPlots)
