fixed for merge

--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -1,7 +1,7 @@
 [Neural Network]
-inputs=2
-layers=2
+inputs=3
+hidden_layers=2
 learning_rate=0.1
-max_epochs=40000
+max_epochs=10
 neurons=8
 output_layer_neurons=1
