--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -1,7 +1,8 @@
 [Neural Network]
 inputs=2
 hidden_layers=3
-learning_rate=0.01
+learning_rate=0.1
+infinite=0
 max_epochs=500
 neurons=6
 output_layer_neurons=1
