--- a/cfg/config.ini
+++ b/cfg/config.ini
@@ -1,9 +1,10 @@
 [Neural Network]
 inputs=2
 hidden_layers=3
-learning_rate=0.1
-infinite=0
+learning_rate=0.05
 max_epochs=500
+infinite=0
+one_shot=1
 neurons=6
 output_layer_neurons=1
 setpoint=0.5
